fix(profile): ignored senders remove button too large on mobile

--- a/src/pages/app/profile/ignore.module.scss
+++ b/src/pages/app/profile/ignore.module.scss
@@ -7,3 +7,27 @@
 .content {
   @extend .profile-unpadded-content;
 }
+.table {
+  a {
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
+    height: auto;
+  }
+
+  .desktop {
+    @media (max-width: 500px) {
+      display: none;
+    }
+  }
+
+  .mobile {
+    display: none;
+    @media (max-width: 500px) {
+      display: inline;
+    }
+  }
+}
+.sender {
+  word-break: break-all;
+}
